--- a/styles.css
+++ b/styles.css
@@ -297,8 +297,6 @@
     margin-bottom: 40px;
 }
 
-
-
 /* Chefs Section */
 #chefs-section {
     text-align: center;
@@ -365,4 +363,67 @@
     font-size: 25px;
     line-height: 50px;
     font-weight: 400;
+}
+
+/* Footer */
+
+#footer {
+    background-color: #311f09;
+}
+
+.footer__container {
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 80px;
+}
+
+.footer__content {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 80px;
+}
+
+.footer__text {
+    color: #e3e2e0;
+    font-size: 16px;
+    line-height: 32px;
+    display: block;
+}
+
+.footer__brand {
+    width: 30%;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.footer__heading {
+    color: #ff8a00;
+    font-size: 25px;
+    line-height: 50px;
+}
+
+.footer__social-icons {
+    margin-top: 40px;
+}
+
+.footer__social-icons img:first-child {
+    margin-right: 30px;
+}
+
+.footer__social-icons img:nth-child(2) {
+    margin-right: 30px;
+}
+
+.footer__logo {
+    margin-bottom: 25px;
+}
+
+.footer__contact {
+    width: 30%;
+}
+
+.footer__contact p {
+    line-height: 24px;
 }
