--- a/base.css
+++ b/base.css
@@ -104,3 +104,50 @@ a {
     padding-left: 55px;
     cursor: pointer;
 }
+
+.btn {
+    cursor: pointer;
+    border: none;
+}
+.btn-s {
+    height: 50px;
+    border-radius: 133px;
+    padding-left: 36px;
+    padding-right: 36px;
+}
+.btn-l {
+    height: 74px;
+    font-size: 20px;
+    font-weight: 600;
+    border-radius: 162px;
+    padding-right: 55px;
+    padding-left: 55px;
+}
+.btn-m {
+    height: 55px;
+    font-size: 16px;
+    font-weight: 400;
+    border-radius: 162px;
+    padding-right: 36px;
+    padding-left: 36px;
+}
+.btn-green {
+    color: #ffffff;
+    background-color: #3fa72f;
+}
+.btn-orange {
+    color: #ffffff;
+    background-color: #ff8a00;
+}
+.btn-black {
+    color: #ffffff;
+    background-color: #311f09;
+}
+.btn-gray {
+    color: #311f09;
+    background-color: #ecf0f1;
+}
+.btn-white {
+    color: #311f09;
+    background-color: #ffffff;
+}
