--- a/base.css
+++ b/base.css
@@ -18,8 +18,8 @@ a {
 
 .btn-small-green {
     height: 50px;
-    color: #ffffff rgb(255, 255, 255);
-    background-color: #3fa72f rgb(63, 167, 47);
+    color: rgb(255, 255, 255);
+    background-color: rgb(63, 167, 47);
     border-radius: 133px;
     border: none;
     padding-left: 36px;
@@ -132,22 +132,22 @@ a {
     padding-left: 36px;
 }
 .btn-green {
-    color: #ffffff rgb(255, 255, 255);
-    background-color: #3fa72f rgb(63, 167, 47);
+    color: rgb(255, 255, 255);
+    background-color: rgb(63, 167, 47);
 }
 .btn-orange {
-    color: #ffffff rgb(255, 255, 255);
-    background-color: #ff8a00 rgb(255, 138, 0);
+    color: rgb(255, 255, 255);
+    background-color: rgb(255, 138, 0);
 }
 .btn-black {
-    color: #ffffff rgb(255, 255, 255);
-    background-color: #311f09 rgb(49, 31, 9);
+    color: rgb(255, 255, 255);
+    background-color: rgb(49, 31, 9);
 }
 .btn-gray {
-    color: #311f09 rgb(49, 31, 9);
-    background-color: #ecf0f1 rgb(236, 240, 241);
+    color: rgb(49, 31, 9);
+    background-color: rgb(236, 240, 241);
 }
 .btn-white {
-    color: #311f09 rgb(49, 31, 9);
-    background-color: #ffffff rgb(255, 255, 255);
+    color: rgb(49, 31, 9);
+    background-color: rgb(255, 255, 255);
 }
