--- a/styles.css
+++ b/styles.css
@@ -27,12 +27,12 @@
 }
 
 .navigation__links li a {
-    color: #311f09;
+    color: rgb(49, 31, 9);
     font-size: 14px;
 }
 
 #navigation__link {
-    color: #ff8a00;
+    color: rgb(255, 138, 0);
 }
 /* .navigation__links li:first-child a {
     color: #ff8a00;
@@ -56,7 +56,7 @@
 .navigation__actions figure {
     height: 50px;
     width: 50px;
-    background-color: #ecf0f1;
+    background-color: rgb(236, 240, 241);
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -99,7 +99,8 @@
     width: max-content;
     margin-bottom: 24px;
     background-color: #ff8a0033;
-    color: #ff8a00;
+    background-color: rgba(255, 138, 0, 0.2);
+    color: rgb(255, 138, 0);
     font-size: 18px;
     border-radius: 123px;
     padding: 5px 20px;
@@ -107,7 +108,7 @@
 
 .hero-section__heading {
     margin-bottom: 24px;
-    color: #311f09;
+    color: rgb(49, 31, 9);
     font-size: 80px;
     font-weight: 600;
     line-height: 88px;
@@ -115,7 +116,7 @@
 
 .hero-section__description {
     margin-bottom: 50px;
-    color: #5c4529;
+    color: rgb(92, 69, 41);
     font-size: 20px;
 }
 
@@ -126,6 +127,7 @@
 
 #welcome-section {
     background-color: #3fc66e1a;
+    background-color: rgba(63, 198, 110, 0.1);
 }
 
 .welcome-section__container {
@@ -153,16 +155,16 @@
 .welcome-section__right h2 {
     font-size: 60px;
     line-height: 70px;
-    color: #311f09;
+    color: rgb(49, 31, 9);
     margin-bottom: 50px;
 }
 
 .welcome-section__right h2 span {
-    color: #ff8a00;
+    color: rgb(255, 138, 0);
 }
 
 .welcome-section__right p {
-    color: #5c4529;
+    color: rgb(92, 69, 41);
     font-size: 20px;
     line-height: 40px;
     margin-bottom: 40px;
@@ -180,7 +182,7 @@
     text-align: center;
     font-size: 60px;
     line-height: 70px;
-    color: #311f09;
+    color: rgb(49, 31, 9);
     margin-bottom: 50px;
 }
 
@@ -206,7 +208,7 @@
 .menu-section__price {
     font-size: 25px;
     line-height: 38px;
-    color: #311f09;
+    color: rgb(49, 31, 9);
     font-weight: 600;
 }
 
@@ -215,6 +217,7 @@
 
     padding: 35px 37px;
     background-color: #d0ccc733;
+    background-color: rgba(208, 204, 199, 0.2);
     border-radius: 70px;
 }
 
@@ -236,7 +239,7 @@
 .card__text {
     font-size: 14px;
     line-height: 28px;
-    color: #59442b;
+    color: rgb(89, 68, 43);
     text-align: center;
     margin-bottom: 30px;
 }
@@ -251,6 +254,7 @@
 
 #reservation-section {
     background-color: #fff4e766;
+    background-color: rgba(255, 244, 231, 0.4);
 }
 
 .reservation-section__container {
@@ -282,16 +286,16 @@
 .reservation-section__right h2 {
     font-size: 60px;
     line-height: 70px;
-    color: #311f09;
+    color: rgb(49, 31, 9);
     margin-bottom: 50px;
 }
 
 .reservation-section__right h2 span {
-    color: #ff8a00;
+    color: rgb(255, 138, 0);
 }
 
 .reservation-section__right p {
-    color: #5c4529;
+    color: rgb(92, 69, 41);
     font-size: 20px;
     line-height: 40px;
     margin-bottom: 40px;
@@ -309,11 +313,11 @@
 .chefs-section__container h2 {
     font-size: 60px;
     line-height: 70px;
-    color: #311f09;
+    color: rgb(49, 31, 9);
     margin-bottom: 50px;
 }
 .chefs-section__container h2 span {
-    color: #ff8a00;
+    color: rgb(255, 138, 0);
 }
 
 .chefs-section__chefs {
@@ -339,27 +343,29 @@
 }
 
 .chefs-section__chef:first-child img {
-    background-color: #c4c4c4;
+    background-color: rgb(196, 196, 196);
 }
 
 .chefs-section__chef:nth-child(2) img {
     background-color: #ff8a0033;
+    background-color: rgba(255, 138, 0, 0.2);
 }
 
 .chefs-section__chef:last-child img {
     background-color: #9d654233;
+    background-color: rgba(157, 101, 66, 0.2);
 }
 
 .chefs-section__chef h4 {
     margin-bottom: 15px;
-    color: #311f09;
+    color: rgb(49, 31, 9);
     font-weight: 600;
     font-size: 25px;
     line-height: 50px;
 }
 
 .chefs-section__chef p {
-    color: #a08d76;
+    color: rgb(160, 141, 118);
     font-size: 25px;
     line-height: 50px;
     font-weight: 400;
@@ -371,7 +377,7 @@
     background-image: url("./assets/customers.png");
     background-size: cover;
     background-position: top;
-    background-color: #fbfafa;
+    background-color: rgb(251, 250, 250);
 }
 
 .testimonials-section__container {
@@ -383,7 +389,7 @@
 .testimonials-section__container h2 {
     font-size: 60px;
     line-height: 70px;
-    color: #311f09;
+    color: rgb(49, 31, 9);
     margin-bottom: 100px;
     text-align: center;
 }
@@ -407,14 +413,14 @@
 }
 
 .testimonials-section__testimonial h4 {
-    color: #311f09;
+    color: rgb(49, 31, 9);
     font-weight: 600;
     font-size: 25px;
     line-height: 50px;
 }
 
 .testimonials-section__testimonial h5 {
-    color: #5c4529;
+    color: rgb(92, 69, 41);
     font-size: 18px;
     line-height: 36px;
     font-weight: 600;
@@ -422,7 +428,7 @@
 }
 
 .testimonials-section__testimonial p {
-    color: #5c4529;
+    color: rgb(92, 69, 41);
     font-weight: 400;
     font-size: 16px;
     line-height: 32px;
@@ -451,14 +457,14 @@
 }
 
 .hours-section__hours h2 {
-    color: #ffffff;
+    color: rgb(255, 255, 255);
     font-size: 60px;
     line-height: 70px;
     margin-bottom: 15px;
 }
 
 .hours-section__hours h3 {
-    color: #ffffff;
+    color: rgb(255, 255, 255);
     font-size: 30px;
     line-height: 60px;
     font-weight: 600;
@@ -471,7 +477,7 @@
 }
 
 .hours-section__lunch-dinner p {
-    color: #ffffff;
+    color: rgb(255, 255, 255);
     text-align: center;
 
     line-height: 200%;
@@ -485,11 +491,10 @@
     margin-right: 15px;
 }
 
-
 /* Footer */
 
 #footer {
-    background-color: #311f09;
+    background-color: rgb(49, 31, 9);
 }
 
 .footer__container {
@@ -505,7 +510,7 @@
 }
 
 .footer__text {
-    color: #e3e2e0;
+    color: rgb(227, 226, 224);
     font-size: 16px;
     line-height: 32px;
     display: block;
@@ -520,7 +525,7 @@
 }
 
 .footer__heading {
-    color: #ff8a00;
+    color: rgb(255, 138, 0);
     font-size: 25px;
     line-height: 50px;
 }
