--- a/styles.css
+++ b/styles.css
@@ -553,3 +553,8 @@
 .footer__contact p {
     line-height: 24px;
 }
+
+@import <link rel= "preconnect" href= "https://fonts.googleapis.com" > <link
+    rel= "preconnect" href= "https://fonts.gstatic.com" crossorigin> <link href=
+    "https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap"
+    rel= "stylesheet" >;
