--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+@font-face {
+    font-family: "Poppins";
+    src: url(./Poppins-Italic.ttf);
+    font-weight: 600;
+}
+
 /* Header */
 
 .header {
@@ -553,8 +559,3 @@
 .footer__contact p {
     line-height: 24px;
 }
-
-@import <link rel= "preconnect" href= "https://fonts.googleapis.com" > <link
-    rel= "preconnect" href= "https://fonts.gstatic.com" crossorigin> <link href=
-    "https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap"
-    rel= "stylesheet" >;
